--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
@@ -24,6 +23,17 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.21.0"
   }
 }
+</script>
+<script>
+  // Add dark mode config to Tailwind and set initial theme to prevent FOUC
+  tailwind.config = {
+    darkMode: 'class',
+  }
+  if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+    document.documentElement.classList.add('dark')
+  } else {
+    document.documentElement.classList.remove('dark')
+  }
 </script>
 </head>
   <body>
